# rundeck-mcp

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml  setup.sh
.githooks/: pre-commit
rundeck_mcp/: __init__.py  config.py  context.py  logging_config.py  observability.py  rundeck_client.py  server.py  telemetry.py  tools.py  tools_executions.py  tools_jobs.py  tools_nodes.py  tools_projects.py  tools_system.py  vpn.py
scripts/: security_scan.sh
tests/: conftest.py  test_rundeck_mcp.py
