[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rundeck-mcp"
version = "1.0.0"
description = "MCP Server para Rundeck 5.19 — produção, segurança e disponibilidade"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brake @ Conexia Educação" }]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.9",
    "pip-audit>=2.7.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",          # mock httpx
    "pytest-cov>=5.0",
    "semgrep>=1.70.0",
]

[project.scripts]
rundeck-mcp = "rundeck_mcp:run"

[tool.hatch.build.targets.wheel]
packages = ["rundeck_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
